# devops_hw

./: .gitignore  README.md
.github/workflows/: python.yml
python/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  test_manual_pass_generator.py
python/advanced/: calculator.py  password_generation.py  user_password_changer.py
python/tests/: test_calculator.py  test_manual_pass_generator.py  test_password_generation.py  test_user_password_changer.py
